experiments/t5/reward_models/logs/30067_0.log
hi
Tue 21 Mar 23:50:21 GMT 2023
compute-permanent-node-912
uid=10025(asa_cooper_stickland) gid=10012(owain_evans) groups=10012(owain_evans)
/data/asa_cooper_stickland/situational-awareness
doing it in one go
1
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/train.py", line 477
    else:
    ^
SyntaxError: invalid syntax
